Change the authorizing query for currencies to allow querying the ones with _id.ledgerId == null